Fixed the grid gap

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 64px;
 }
 
 section {
@@ -84,7 +85,6 @@ footer p {
   font-size: 16px;
   opacity: 0.7;
   line-height: 24px;
-  margin: 20px;
 }
 
 footer ul {
